src/test/resources/etapa3/failing/wrongMethodReturnType.ru
struct A {
    Int a;
}

impl A {
    .() {}
    fn method_1 () -> C {}
}

start {}